# textual-wizard

./: 404.html  CHANGELOG.md  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: docs_publish.yml  pr_checks.yml  pypi_publish.yml
docs/: CNAME  index.md
docs/contributing/: index.md
docs/getting-started/: basic-app.md  index.md  multi-stage.md  no-tui-mode.md  single-page-mode.md
docs/reference/: email.md  integer.md  number.md  radio-set.md  select.md  selection-list.md  text.md  url.md  wizard.md
docs/stylesheets/: mkdocstrings.css
getting-started/: index.html
getting-started/basic-app/: index.html
reference/email/: index.html
reference/integer/: index.html
reference/number/: index.html
reference/select/: index.html
reference/text/: index.html
reference/url/: index.html
reference/wizard/: index.html
search/: search_index.json
src/textual_wizard/: __init__.py  __main__.py  exceptions.py  inputs.py  wizard.py  wizard.tcss
stylesheets/: theme.css
tests/: test_inputs.py
